# depend-en-moi

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  todo.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: active_repo.py  create_issues_from_todo.py  create_issues_workflow.yml  pypi_publish.yml  todo-to-issue.yml
DependMLMoi/: active_repo.py  arg_parser.py  constants.py  create_issues_from_todo.py  depend_ml.py  depend_ml_moi.py  depend_mlops.py  dependencies.py  liblist.py  library_process.py
DependMLMoi/utils/logs/: log_tool.py
dependMLOps.egg-info/: PKG-INFO  entry_points.txt  requires.txt
dp_enmoi/: _constants.py  _libraries.py  arg_parser.py  dependonme.py
scripts/: main.py
tree/: dep_en_moi.yaml  module_guidance.yaml  proj-tree.txt  tree.yaml
