[metadata]
name = dp-enmoi
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A small example package for dp-enmoi
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dp_enmoi
packages = find:
python_requires = >=3.6
install_requires =
    examplepackage>=1.2.3
    anotherpackage~=2.4

[options.packages.find]
where = dp_enmoi

[options.extras_require]
dev =
    check-manifest
    build
test =
    pytest
